# Master_thesis

./: 2_robot_Discrete time.py  2_robot_real_time.py  2_robot_test.py  Create_world_space.py  LOGGING_ENHANCEMENTS.md  RESUME_GUIDE.md  RESUME_IMPLEMENTATION.md  RUNS_DIRECTORY_GUIDE.md  Read_file_urdf.py  Robot5.py  Robot6.py  Robot6_SAC.py  SAC_LOGIC_ANALYSIS.md  Simulation_TN2.py  Simulation_TN3.py  Simulation_TN4.py  TENSORBOARD_LOGGING_GUIDE.md  Train_Robot6.py  big_grid.urdf  evaluate.py  evaluate_model.py  main.py  main_1.py  main_2.py  main_3.py  main_4.py  model_checkpoint_model_4.pth  plot_rewards.py  requirements.txt  train_sac_robot6.py
2_robot/Robot/: CMakeLists.txt  package.xml
2_robot/URDF_file_2/: CMakeLists.txt  package.xml
2_robot/URDF_file_2/config/: joint_names_URDF_file_2.yaml
2_robot/URDF_file_2/launch/: display.launch  gazebo.launch
2_robot/URDF_file_2/meshes/: Link_1_sixdof.STL  Link_2_sixdof.STL  Link_3_sixdof.STL  Link_4_sixdof.STL  Link_5_sixdof.STL  Link_6_sixdof.STL  base_link.STL
2_robot/URDF_file_2/urdf/: 6_Dof.urdf  URDF_file_2.csv
checkpoints/sac_robot6_20251122-164237/: best.pth
checkpoints/sac_robot6_20251122-164944/: best.pth
envs/: pybullet_robot6_env.py
eval_out/: eval_rewards.csv
function_robot/: Coordinate_fanuc.py  Coordinate_sixdof.py  Inver_kine_function.py  Jtool_fanuc_function.py  Jtool_sixdof_function.py  MPPI_function.py  Robot5_observer.py  Robot6_observer.py
logs_long/SAC_1/: events.out.tfevents.1763779340.LAPTOP-7MVA4582.16628.0
logs_test/SAC_1/: events.out.tfevents.1763779016.LAPTOP-7MVA4582.2384.0
(+18 files in other folders)
